# clauding

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: install.sh
src/clauding/: __init__.py  __main__.py  cli.py
src/clauding/commands/: __init__.py  backups.py  clean.py  list_cmd.py  move.py
src/clauding/core/: __init__.py  backup.py  config.py  paths.py
tests/: __init__.py  conftest.py
tests/test_commands/: __init__.py  test_backups.py  test_clean.py  test_list.py  test_move.py
tests/test_core/: __init__.py  test_backup.py  test_paths.py
